# monzo-take-home

./: README.md  pyproject.toml
crawler/: crawler.py  main.py
tests/: conftest.py  test_app.py  test_crawler.py
