[tool.poetry]
name = "monzo take home"
version = "0.1.0"
description = ""
authors = ["Jatin <arorajatin6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
httpx = "^0.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
black = "^22.8.0"
pytest-mock = "^3.8.2"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = '''
  --strict-markers
  --tb=short
  --cov=crawler
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
